tests/baselines/reference/importAndVariableDeclarationConflict4.errors.txt
importAndVariableDeclarationConflict4.ts(6,1): error TS2440: Import declaration conflicts with local declaration of 'x'.


==== importAndVariableDeclarationConflict4.ts (1 errors) ====
    module m {
      export var m = '';
    }
    
    var x = '';
    import x = m.m;
    ~~~~~~~~~~~~~~~
!!! error TS2440: Import declaration conflicts with local declaration of 'x'.
    